# mlconf

./: .buildinfo  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README.rst  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.py
.doctrees/: environment.pickle  index.doctree
.doctrees/usage/: installation.doctree  quickstart.doctree
.github/: documentation.yml
.github/workflows/: documentation.yml
.zed/: settings.json
docs/: index.rst
docs/usage/: quickstart.rst
mlconf/: __init__.py  input_stream.py  mlconfig.py  parser.py  token_stream.py  tokenizer.py  user_interface.py  utils.py
source/: conf.py
source/usage/: installation.rst
src/mlconf/: __init__.py  char.py  config.py  dictconfig.py  errors.py  extended_list_and_tuple.py  parser.py  regex_utils.py  resolver.py  test.py  token.py  tokenizer.py  word.py
tests/: conftest.py  test_char.py  test_config.py  test_dictconfig.py  test_extended_list_and_tuple.py  test_mlconf.py  test_mlconfig.py  test_parser.py  test_regex_utils.py  test_tokenizer.py  test_user_interface.py  test_utils.py
tests/test_configs/: test1.conf  test_bad_indent.conf  test_var.conf
tests/test_configs/test_imports/: imp.conf  test.conf
tests/test_configs/test_imports/b/: imp2.conf
tests/test_configs/test_imports/b/c/: imp3.conf
usage/: installation.html  quickstart.html
