[project]
name = "mlconf"
version = "0.1.0"
description = "Add your description here"
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.6.2",
    "pyright>=1.1.378",
    "ruff-lsp>=0.0.55",
    "pytest>=8.3.2",
    "mypy>=1.11.2",
    "pre-commit>=3.5.0",
    "setuptools>=74.1.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mlconf"]

[tool.pyright]
venvPath = "."
venv = ".venv"
